--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -1,31 +1,29 @@
-<img [src]="data[0].avatar" />
-<div>{{ data[0].id }}</div>
-<div>{{ data[0].last_name }}</div>
-<div>{{ data[0].first_name }}</div>
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="DataTable">
     <!-- Position Column -->
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <th mat-header-cell *matHeaderCellDef>first_name</th>
+      <td mat-cell *matCellDef="let element">{{ element.first_name }}</td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      <th mat-header-cell *matHeaderCellDef>last_name</th>
+      <td mat-cell *matCellDef="let element">{{ element.last_name }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    <ng-container style="justify-content: center" matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef>avatar</th>
+      <td mat-cell *matCellDef="let element">
+        <img [src]="element.avatar" />
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
