--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -21,8 +21,23 @@
     account_balance_wallet="trending_up"
   ></app-card>
 </div>
+
 <div class="middle-section">
-  <app-graph-card></app-graph-card>
-  <app-graph-card></app-graph-card>
+  <div class="chart-container">
+    <p-chart
+      class="chart"
+      type="line"
+      [data]="chartData"
+      [options]="options"
+    ></p-chart>
+  </div>
+  <div class="chart-container">
+    <p-chart
+      class="chart"
+      type="line"
+      [data]="data"
+      [options]="options"
+    ></p-chart>
+  </div>
 </div>
 <div class="bottom-section"></div>
