--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="nav-item">
     <mat-icon class="icon"> show_chart</mat-icon>
-    <span><a routerLink="Statistics"> Statistics</a></span>
+    <span><a routerLink="UserDetails"> UserDetails</a></span>
   </div>
   <div class="nav-item">
     <mat-icon class="icon"> phone</mat-icon>
