--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,1 +1,4 @@
-<p>statistics works!</p>
+<div class="loading-container">
+  <h1>Loading</h1>
+  <mat-spinner class="large-spinner"></mat-spinner>
+</div>
