--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -1,12 +1,12 @@
 <div class="header">
   <div class="logo">logo</div>
-  <div class="page">page/DashBoard</div>
+  <!-- 
   <div class="search">
     <div class="searchbox"><input type="text" placeholder="Type here.." /></div>
     <div class="searchbutton">
       <button id="search" mat-raised-button>search</button>
     </div>
-  </div>
+  </div> -->
   <div class="user">
     <div class="username">SaraAshraf</div>
     <div class="userimage">SA</div>
